# image-search

./: .dockerignore  .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  NOTICE  README.md  README_ja.md  README_zh.md  pyproject.toml
backend/bootstrap/: app.py
backend/image_search/: __init__.py  connection.py  embeddings.py  i18n.py  image_store.py  utils.py
docker/: .env.example  docker-compose.yml
frontend/: streamlit_app.py
scripts/: clean.sh  init.sh  init_docker.sh  load_image.py  start.sh  stop.sh
src/backend/: app.py
src/common/: __init__.py  compress.py  db.py  embeddings.py  image_store.py  logger.py
src/frontend/: i18n.py  streamlit_app.py
src/tools/: load_image.py
web/: next.config.ts  package-lock.json  package.json
web/app/: page.tsx
web/app/component/SearchResult/: index.module.css  index.tsx
web/app/component/UploadImg/: index.module.css  index.tsx
