[tool.poetry]
name = "image-search"
version = "0.1.0"
description = ""
authors = ["yuyi <yuyi.wsy@oceanbase.com>"]
readme = "README.md"
packages = [{ include = "image_search", from = "backend" }]

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
towhee = "^1.1.3"
streamlit = "^1.39.0"
python-dotenv = "^1.0.1"
opencv-python = "^4.10.0.84"
torchvision = "^0.20.0"
transformers = "^4.45.2"
pyobvector = "^0.1.6"
fastapi-cdn-host = "^0.9.1"
fastapi = "^0.115.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "aliyun"
url = "http://mirrors.aliyun.com/pypi/simple/"
priority = "primary"

[[tool.poetry.source]]
name = "PyPI"
priority = "supplemental"