[project]
name = "image-search"
version = "0.2.0"
description = ""
authors = [
    {name = "oceanbase", email = "open_oceanbase@oceanbase.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "dashscope>=1.20.0,<2.0.0",
    "streamlit>=1.39.0,<2.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
    "pyseekdb>=1.1.0,<2.0.0",
    "fastapi-cdn-host>=0.9.1,<1.0.0",
    "fastapi>=0.115.12,<1.0.0",
    "uvicorn[standard]>=0.30.0,<1.0.0",
    "openai>=1.54.3,<2.0.0",
    "httpx>=0.27.2,<0.28.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.basedpyright]
pythonVersion = "3.10"
typeCheckingMode = "basic"
reportMissingImports = false
reportMissingModuleSource = false